[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/IsometricMap/widget/isometric_asset_selector.gd" type="Script" id=1]
[ext_resource path="res://addons/IsometricMap/widget/files_tree.gd" type="Script" id=2]

[node name="IsometricAssetSelector" type="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 669.0
margin_bottom = 744.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 659.0
margin_bottom = 651.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiles" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Tiles"]
margin_right = 650.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TilesTree" type="Tree" parent="TabContainer/Tiles/ScrollContainer"]
margin_right = 650.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true
drop_mode_flags = 1
script = ExtResource( 2 )

[node name="Maps" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Maps"]
margin_right = 649.0
margin_bottom = 561.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapsTree" type="Tree" parent="TabContainer/Maps/ScrollContainer"]
margin_right = 649.0
margin_bottom = 561.0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true
drop_mode_flags = 1
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 27.0
margin_top = 689.0
margin_right = 87.0
margin_bottom = 709.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Refresh"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="regenerate_trees"]
